compiler/testData/diagnostics/tests/inference/emptyIntersectionTypes/kt45461_21.diag.txt
/kt45461_21.kt:13:25: error: type argument for a type parameter S can't be inferred because it has incompatible upper bounds: In<Inv<Int>>, K (incompatible type arguments: Int, Number)
    Bar<In<Inv<Int>>>().takeFoo(foo) // error in 1.3.72, no error in 1.4.31
                        ^
